Including new requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,40 @@
-numpy==1.20.3
-transformers==4.6.1
-torch==1.8.0
-sklearn==0.24.2
-tensorboardX==1.9
-json
+astor
+bleach
+cherrypy
+gast
+grpcio
+h5py
+html5lib
+keras
+keras-applications
+keras-preprocessing
+markupsafe
+nltk
+numpy
+protobuf
+pynif
+scipy
 sentence_transformers
+six
+somajo
+tensorboardX
+tensorboard
+tensorflow
+termcolor
+#transformers==4.49.0
+werkzeug
+torch
+configparser
+tqdm
+pytorch_pretrained_bert
+rdflib
+flask
+flask_cors
+flask_redoc
+rdflib-jsonld
+langchain_huggingface
+langchain_community
+openpyxl
+faiss-cpu
+faiss-gpu
+tf-keras
