--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
+.gitignore
 src/preprocessing/__pycache__/papers_section_data_builder.cpython-38.pyc
 src/models/__pycache__/bert.cpython-39.pyc
-.gitignore
 src/models/__pycache__/ollama.cpython-39.pyc
 src/models/__pycache__/rules.cpython-39.pyc
-.gitignore
+src/__pycache__/flask-rest.cpython-39.pyc
+src/__pycache__/service.cpython-39.pyc
+src/__pycache__/mydata.cpython-39.pyc
+src/models/__pycache__/embeddings.cpython-39.pyc
